--- a/style.css
+++ b/style.css
@@ -701,6 +701,11 @@ header div {
     scroll-snap-align: center;
 }
 
+.slide-dts {
+    width: 700px;
+    height: 120px;
+}
+
 
 .slide .image {
     width: 700px;
@@ -729,10 +734,10 @@ header div {
 .links {
     width: 100%;
     display: flex;
-    gap: 20px;
+    column-gap: 20px;
     align-items: center;
     padding: 15px 20px;
-    margin: 30px 0;
+    margin: 34px 0;
 }
 
 .links:hover {
@@ -792,6 +797,15 @@ header div {
 }
 
 
+.slide-direction > * {
+    text-transform: uppercase;
+    font-size: 20px;
+    font-weight: 500;
+    font-style: normal;
+    letter-spacing: 2px;
+}
+
+
 @media (max-width:414px) {
 
     .previous-projects {
@@ -826,6 +840,11 @@ header div {
         height: 150px;
     }
 
+    .slide-dts {
+        width: 100%;
+        height: 140px;
+    }
+
     .slide h3 {
         font-size: 13px;
         margin-top: 10px;
@@ -836,6 +855,12 @@ header div {
         letter-spacing: 0; 
         line-height: 20px; 
         padding: 10px 20px;
+    }
+
+
+    .links {
+        padding: 15px 20px 0px;
+        margin: 30px 0 10px;
     }
 
 
@@ -851,6 +876,11 @@ header div {
 
     .slide-direction {
         height: 20px;
+    }
+
+    .slide-direction > * {
+        font-size: 12px;
+        letter-spacing: 1px;
     }
 }
 
@@ -887,6 +917,11 @@ header div {
         height: 230px;
     }
 
+    .slide-dts {
+        width: 600px;
+        height: 120px;
+    }
+
     .slide h3 {
         font-size: 15px;
         margin-top: 10px;
@@ -900,6 +935,10 @@ header div {
         padding: 10px 20px;
     }
 
+    .links {
+        padding: 15px 20px 0px;
+        margin: 30px 0 20px;
+    }
 
     #code,#live-site {
         width: 100px;
@@ -912,7 +951,11 @@ header div {
 
 
     .slide-direction {
-        height: 20px;
+        height: 30px;
+    }
+
+    .slide-direction > * {
+        font-size: 18px;
     }
 }
 
