--- a/style.css
+++ b/style.css
@@ -711,6 +711,15 @@ header div {
     width: 700px;
     height: 250px;
     background-image:linear-gradient(to right, #8801DB, #0195F7);
+
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+#slide__logo {
+    width: 250px;
+    height: auto;
 }
 
 .slide h3 {
@@ -785,10 +794,11 @@ header div {
 .slide-direction {
     width: 20%;
     height: 30px;
+    padding: 0 100px;
 
     display: flex;
     align-items: center;
-    justify-content: center;
+    justify-content: space-between;
 
     border: 1px solid var(--blue);
     border-bottom-left-radius: 20px;
@@ -798,11 +808,21 @@ header div {
 
 
 .slide-direction > * {
-    text-transform: uppercase;
-    font-size: 20px;
-    font-weight: 500;
-    font-style: normal;
-    letter-spacing: 2px;
+    width: 8px;
+    height: 8px;
+    border: 1px solid var(--blue);
+    border-top: 0;
+
+}
+
+.slide-direction span:first-of-type {
+    border-right: 0;
+    transform: rotate(45deg);
+}
+
+.slide-direction span:nth-of-type(2) {
+    border-left: 0;
+    transform: rotate(-45deg);
 }
 
 
@@ -838,6 +858,11 @@ header div {
     .slide .image {
         width: 100%;
         height: 150px;
+    }
+
+    #slide__logo {
+        width: 150px;
+        height: auto;
     }
 
     .slide-dts {
@@ -876,6 +901,7 @@ header div {
 
     .slide-direction {
         height: 20px;
+        padding: 10px 20px;
     }
 
     .slide-direction > * {
