--- a/style.css
+++ b/style.css
@@ -48,7 +48,7 @@ body {
 
 /*start of header section*/
 header {
-    width :100%;
+    width :100vw;
     height: auto;
 
     display: flex;
@@ -145,7 +145,7 @@ header div {
 
 /*start of introduction section*/
 .introduction {
-    width: 100%;
+    width: 100vw;
     height: auto;
     margin-top: 50px;
     margin-bottom: 150px;
@@ -187,25 +187,26 @@ header div {
 }
 
 .introduction h1 {
-    font-size: 50px;
+    font-size: 3rem;
     margin-bottom: 10px;
     margin-top: 100px;
 }
 
 
 .introduction h2 {
-    font-size: 70px;
+    font-size: 4.375rem;
     margin-bottom: 10px;
 }
 
 
 .introduction h3 {
-    font-size: 90px;
+    font-size: 5.625rem;
 }
 
 
 @media (max-width:430px) {
     .introduction {
+        width: 100vw;
         margin-top: 30px;
         margin-bottom: 0;
         padding: 10px 10px 50px;
@@ -233,20 +234,20 @@ header div {
     }
 
     .introduction h1 {
-        font-size: 30px;
+        font-size: 1.875rem;
         margin-bottom: 10px;
         margin-top: 50px;
     }
 
 
     .introduction h2 {
-        font-size: 40px;
+        font-size: 2.5rem;
         margin-bottom: 10px;
     }
 
 
     .introduction h3 {
-        font-size: 50px;
+        font-size: 3.125rem;
     }
 
     /*end of introduction section*/
@@ -261,7 +262,7 @@ header div {
     position: relative;
     display: block;
     margin-top: 200px;
-    width: 100%;
+    width: 100vw;
     height: auto;
     padding: 100px 100px;
 }
@@ -454,7 +455,7 @@ header div {
 
 .my-skills {
     position: relative;
-    width: 100%;
+    width: 100vw;
     height: auto;
     margin: 150px 0;
     padding: 20px 100px;
@@ -565,7 +566,7 @@ header div {
 /*end of my skills section*/
 
 .my-services {
-    width: 100%;
+    width: 100vw;
     height: auto;
     padding: 0 100px;
     margin: 150px 0;
@@ -655,7 +656,7 @@ header div {
 
 /*start of previous projects section*/
 .previous-projects {
-    width: 100%;
+    width: 100vw;
     height: auto;
     padding: 20px 20px;
     margin: 200px 0;
@@ -827,6 +828,7 @@ header div {
 
    
     .slide-container {
+        width: 100%;
         padding:0 10px 30px;
         gap: 20px;
     }
@@ -851,7 +853,7 @@ header div {
     }
 
     .slide-dts {
-        width: 100%;
+        width: 100vw;
         height: 140px;
     }
 
