--- a/style.css
+++ b/style.css
@@ -48,7 +48,7 @@ body {
 
 /*start of header section*/
 header {
-    width :100vw;
+    width :100%;
     height: auto;
 
     display: flex;
@@ -145,7 +145,7 @@ header div {
 
 /*start of introduction section*/
 .introduction {
-    width: 100vw;
+    width: 100%;
     height: auto;
     margin-top: 50px;
     margin-bottom: 150px;
@@ -187,26 +187,25 @@ header div {
 }
 
 .introduction h1 {
-    font-size: 3rem;
+    font-size: 50px;
     margin-bottom: 10px;
     margin-top: 100px;
 }
 
 
 .introduction h2 {
-    font-size: 4.375rem;
+    font-size: 70px;
     margin-bottom: 10px;
 }
 
 
 .introduction h3 {
-    font-size: 5.625rem;
+    font-size: 90px;
 }
 
 
 @media (max-width:430px) {
     .introduction {
-        width: 100vw;
         margin-top: 30px;
         margin-bottom: 0;
         padding: 10px 10px 50px;
@@ -234,20 +233,20 @@ header div {
     }
 
     .introduction h1 {
-        font-size: 1.875rem;
+        font-size: 30px;
         margin-bottom: 10px;
         margin-top: 50px;
     }
 
 
     .introduction h2 {
-        font-size: 2.5rem;
+        font-size: 40px;
         margin-bottom: 10px;
     }
 
 
     .introduction h3 {
-        font-size: 3.125rem;
+        font-size: 50px;
     }
 
     /*end of introduction section*/
@@ -262,7 +261,7 @@ header div {
     position: relative;
     display: block;
     margin-top: 200px;
-    width: 100vw;
+    width: 100%;
     height: auto;
     padding: 100px 100px;
 }
@@ -455,7 +454,7 @@ header div {
 
 .my-skills {
     position: relative;
-    width: 100vw;
+    width: 100%;
     height: auto;
     margin: 150px 0;
     padding: 20px 100px;
@@ -566,7 +565,7 @@ header div {
 /*end of my skills section*/
 
 .my-services {
-    width: 100vw;
+    width: 100%;
     height: auto;
     padding: 0 100px;
     margin: 150px 0;
@@ -656,7 +655,7 @@ header div {
 
 /*start of previous projects section*/
 .previous-projects {
-    width: 100vw;
+    width: 100%;
     height: auto;
     padding: 20px 20px;
     margin: 200px 0;
@@ -828,7 +827,6 @@ header div {
 
    
     .slide-container {
-        width: 100%;
         padding:0 10px 30px;
         gap: 20px;
     }
@@ -853,7 +851,7 @@ header div {
     }
 
     .slide-dts {
-        width: 100vw;
+        width: 100%;
         height: 140px;
     }
 
